--- a/aaliya.css
+++ b/aaliya.css
@@ -9,7 +9,7 @@ body {
 
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: yellowgreen;
+    background-color: blueviolet;
 }
 p {
     margin: .5em 0 .5em 0;
